making it responsive

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <img src="public/impProg.png">
                     </div>
                     <div class="imperativePrograming-content">
-                        <h3>imperative Programing</h3>
+                        <h3>Imperative Programing</h3>
                         <p>A nutritional clinic program developed in C. Final project for the imperative programming course at the Instituto Politécnico do Cávado e do Ave.</p>
                         <a class="website btn" href="">Program</a>
                     </div>
